changed server redirect URL

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ STRIPE_SECRET_KEY  = sk_test_51N43KcG6ekPTMWCwAGlW6m53NkBpsx9Iukbjl9yB1ytI2aqPWM
 
 REMOVE_BRANDING_PRICE = price_1N53z2G6ekPTMWCwGfVS7xDn
 ADDITIONAL_TEAM_MEMBER_PRICING = price_1NH7fNG6ekPTMWCwi4CIbCh5 
+
+APP_MODE  = 'production'
