--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Himel",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
+    "jsonwebtoken": "^9.0.2",
     "stripe": "^12.4.0"
   },
   "devDependencies": {
