--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.8.0",
+    "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
+    "puppeteer": "^22.4.1",
     "stripe": "^12.4.0"
   },
   "devDependencies": {
